# toolbox

./: LICENSE-APACHE  README.md  justfile  ruff.toml
.github/: settings.yml
.github/workflows/: ci.yml
bcat/: README.md  bcat
blinks/: README.md  blinks
chatgpt2md/: README.md  chatgpt2md
check-math/: README.md  check-math
claude2md/: README.md  claude2md
commit-survey/: README.md  commit-survey
docker/: push-ecr.sh
gemini2md/: README.md  gemini2md
gh-dependabot/: README.md  gh-dependabot
ips/: README.md  ips  metrics.py  neighbors.py  net_platform.py
meeting-record/: README.md  meeting-record
perplexity-export/: README.md  perplexity-export
perplexity2md/: README.md  perplexity2md
pinglet/: README.md  metrics.py  neighbors.py  net_platform.py  pinglet
readme-cluster/: .gitignore  README.md  cluster.py
recorder/: README.md  recorder
reflow/: README.md  reflow
scry/: Cargo.toml  README.md
scry/src/: cache.rs  code.rs  corpus.rs  github.rs  lib.rs  main.rs  mcp.rs  openrouter.rs
scry/tests/: probes.tsv
tests/: lib.sh  run.sh  test_bcat.sh  test_blinks.sh  test_browser.sh  test_chatgpt2md.sh  test_claude2md.sh  test_commit-survey.sh  test_docker_publish.sh  test_gemini2md.sh  test_gh-dependabot.sh  test_ips.sh  test_ips_adapters.py  test_ips_logic.py  test_ips_speed.py  test_perplexity-export.sh  test_pinglet.sh  test_pinglet_adapters.py  test_pinglet_logic.py  test_pinglet_speed.py  test_reflow.sh  test_toks.sh  test_trunk.sh
tests/docker/: smoke.sh  (+1 more)
toks/: README.md  toks
trunk/: README.md  trunk
webshot/: README.md  webshot
(+20 files in other folders)
