[package]
name = "scry"
version = "0.1.0"
edition = "2021"
description = "Scoped, instruction-conditioned README embeddings with EVoC clustering and a dual-LLM ask, over OpenRouter"
license = "MIT OR Apache-2.0"

# Standalone crate (clump is unpublished, so a path dep; this binary is local-only).
[workspace]

[dependencies]
clump = { path = "../../clump" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"

[[bin]]
name = "scry"
path = "src/main.rs"
